fix date picker spacing

--- a/src/styles/partials/_input-group.scss
+++ b/src/styles/partials/_input-group.scss
@@ -2,10 +2,12 @@
   display: flex;
   flex-direction: column;
   margin-bottom: $size-med;
+  padding: 15px;
 
   @media (min-width: $breakpoint) {
     flex-direction: row;
     margin-bottom: $size-lar;
+    padding: 0;
   }
 }
 
